configured fogot and reset password into swagger docs
